language/tests/error/TypeError02.sl
toeminto piä() {
  if ("4") { }  
}  
